# SolarWatch

./: .gitignore  PRD.md  README.md  pyproject.toml  requirements.txt
aditya_l1_flare_prediction.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
backend/: requirements.txt
backend/app/: crud.py  database.py  main.py  models.py  schemas.py
backend/mock/: latest_prediction.json
backend/utils/: inference.py
config/: pipeline.yaml
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: routeTree.gen.ts  styles.css
ml/: 01_download_data.py  02_preprocess.py  03_train_cnn.py  04_train_lstm.py  05_evaluate.py  inference.py  train_and_save.py
ml/data/: download.py
ml/dataset/: __init__.py  build_dataset.py  builder.py  config.py
ml/eda/: __init__.py  flare_detector.py  light_curve_plotter.py  run_eda.py  statistics.py
ml/features/: __init__.py  basic_features.py  feature_pipeline.py  flare_features.py  run_features.py  spectral_features.py  temporal_features.py
ml/loaders/: helios_loader.py  multi_day_loader.py  solexs_loader.py
ml/pipeline/: ml_mechanics_test.py
ml/utils/: config.py
tests/unit/: fixtures.py  helios_fixtures.py  test_api_endpoints.py  test_basic_feature.py  test_basic_features.py  test_eda.py  test_feature_pipeline.py  test_flare_features.py  test_helios_basic_features.py  test_helios_eda.py  test_helios_flare_features.py  test_helios_pipeline.py  test_helios_spectral_features.py  test_helios_temporal_features.py  test_run_features.py  test_solexs_loader.py  test_spectral_features.py  test_temporal_features.py
(+35 files in other folders)
